full multiplayer open world and bot functionality

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         integrity="sha512-1YMgn4j8cIL91s14ByDGmHtBU6+F8bWOMcF47S0cRO3QNm8SKPNexy4s3OCim9fABUtO++nJMtcpWbINWjMSzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/constants.js"></script>
     <script>
         const socket = io.connect('localhost:3000');
 
