--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="/constants.js"></script>
     <script>
-        const socket = io.connect('localhost:3000');
-
+        // const socket = io.connect('localhost:3000');
+        const socket = io.connect('https://multiplayer-tanks-3fa3c942a132.herokuapp.com/');
     </script>
     <script src="/sketch.js" type="text/javascript"></script>
 </body>
