--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,41 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.2/p5.min.js"
         integrity="sha512-1YMgn4j8cIL91s14ByDGmHtBU6+F8bWOMcF47S0cRO3QNm8SKPNexy4s3OCim9fABUtO++nJMtcpWbINWjMSzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- <script src="p5.js"></script> -->
     <script src="/socket.io/socket.io.js"></script>
     <script src="/constants.js"></script>
     <script src="/vision.js"></script>
+    <div id="lobby-controls">
+      <input id="player-name" type="text" placeholder="Player">
+      <button id="set-name">Set Name</button>
+      <button id="create-lobby">Create Lobby</button>
+      <input id="join-lobby-code" type="text" placeholder="Enter Lobby Code">
+      <button id="join-lobby">Join Lobby</button>
+  </div>
+  <div>
+    <!-- <h2 id="lobby-info">Lobby: N/A</h2> -->
+  </div>
     <script>
-        const socket = io.connect('localhost:3000');
-        // const socket = io.connect('https://multiplayer-tanks-3fa3c942a132.herokuapp.com/');
+        // const socket = io.connect('localhost:3000');
+        const socket = io.connect('https://multiplayer-tanks-3fa3c942a132.herokuapp.com/');
+
+        document.getElementById('create-lobby').addEventListener('click', () => {
+          socket.emit('createLobby');
+        });
+        
+        document.getElementById('join-lobby').addEventListener('click', () => {
+            const lobbyCode = document.getElementById('join-lobby-code').value.trim().toUpperCase();
+            if (lobbyCode) {
+                socket.emit('joinLobby', lobbyCode);
+            }
+        });
+
+        document.getElementById('set-name').addEventListener('click', () => {
+            const name = document.getElementById('player-name').value.trim();
+            if (name) {
+                socket.emit('setName', name);
+            }
+        });
     </script>
     <script src="/sketch.js" type="text/javascript"></script>
 </body>
