ads and fixed canvas size

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tanks</title>
+    <title>🕹️ Multiplayer Tanks</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2188750956198037"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
