--- a/public/index.html
+++ b/public/index.html
@@ -277,8 +277,8 @@
             <!-- <h2 id="lobby-info">Lobby: N/A</h2> -->
         </div>
         <script>
-        const socket = io.connect('localhost:3000');
-        // const socket = io.connect('https://multiplayer-tanks-3fa3c942a132.herokuapp.com/');
+        // const socket = io.connect('localhost:3000');
+        const socket = io.connect('https://multiplayer-tanks-3fa3c942a132.herokuapp.com/');
 
         const el = (id) => document.getElementById(id);
         const toast = (msg) => {
